--- a/silicon-design/src/styles/contact-styles.css
+++ b/silicon-design/src/styles/contact-styles.css
@@ -59,15 +59,44 @@
   justify-content: space-between;
   align-items: flex-start;
   position: relative;
+  flex-direction: column;
+}
+#contact-us .contact-elements.desktop-view {
+  display: flex;
+}
+#contact-us .contact-elements.mobile-view {
+  display: none;
 }
 #contact-us .contact-elements .contact-element {
   display: flex;
-  gap: 1rem;
+  flex-direction: column;
+}
+#contact-us .contact-elements .contact-element .email-us-header,
+#contact-us .contact-elements .contact-element .careers-header {
+  display: flex;
+  align-items: flex-start;
+  gap: 1.5rem;
+}
+#contact-us .contact-elements .contact-element p {
+  padding-left: 4.6875rem;
+}
+#contact-us .contact-elements .contact-element a {
+  padding-left: 4.6875rem;
 }
 #contact-us .contact-elements a.leave-message,
 #contact-us .contact-elements a.send-application {
   color: #6366f1;
+  display: flex;
+  color: #6366f1;
+  align-items: center;
+  gap: 0.5rem;
+  text-decoration: none;
   font-size: 16px;
+  display: flex;
+  color: #6366f1;
+  align-items: center;
+  gap: 0.5rem;
+  text-decoration: none;
   font-weight: 600;
   display: flex;
   color: #6366f1;
@@ -99,7 +128,7 @@
   flex-direction: column;
   width: 24.375rem;
   padding-bottom: 127px;
-  gap: 2rem;
+  gap: 3rem;
 }
 #contact-us .contact-elements .contact-info h1 {
   color: #0b0f19;
@@ -109,12 +138,6 @@
 #contact-us .contact-elements .contact-info img {
   width: 55px;
   height: 55px;
-}
-#contact-us .contact-elements .contact-info .email-us {
-  display: flex;
-  gap: 1.5rem;
-  align-items: flex-start;
-  margin-top: 4.5rem;
 }
 #contact-us .contact-elements .contact-info .email-us-text {
   display: flex;
@@ -130,12 +153,6 @@
   color: #565973;
   font-size: 1rem;
   font-weight: 400;
-}
-#contact-us .contact-elements .contact-info .careers {
-  display: flex;
-  gap: 1.5rem;
-  align-items: flex-start;
-  margin-top: 45px;
 }
 #contact-us .contact-elements .contact-info .careers-text {
   display: flex;
@@ -156,10 +173,27 @@
   position: absolute;
   bottom: -6.875rem;
   right: 0;
+  margin-right: 1rem;
   background-color: white;
   z-index: 3;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+@media (max-width: 947px) {
+  #contact-us .contact-elements .consultation {
+    max-width: 25rem;
+  }
+  #contact-us .contact-elements .consultation h3 {
+    padding-right: 0 !important;
+  }
+}
+@media (max-width: 818px) {
+  #contact-us .contact-elements .consultation {
+    max-width: 21.875rem;
+  }
+  #contact-us .contact-elements .consultation h3 {
+    padding-right: 0 !important;
+  }
 }
 #contact-us .contact-elements .consultation .consultation-wrapper {
   display: flex;
@@ -413,21 +447,21 @@ body.dark-theme #contact-us::after {
   padding-left: 1rem;
   padding-right: 1rem;
   align-items: stretch;
+  gap: 1rem;
 }
 #map-section .map-container .leaflet-container {
   border-radius: 8px;
   flex: 1;
   max-width: 39.75rem;
   min-height: 30.125rem !important;
+  background: none;
 }
 #map-section .map-container .addresses {
   display: flex;
   flex-direction: column;
-  max-width: 39.75rem;
   align-items: flex-end;
   flex: 1;
   gap: 3.125rem;
-  min-height: 30.125rem !important;
 }
 #map-section .map-container .addresses .medical-center {
   display: flex;
@@ -693,4 +727,114 @@ body.dark-theme #map-section .addresses .medical-center h4 {
 }
 body.dark-theme #map-section .addresses .medical-center .times-wrapper .time-entry .time-text b {
   color: #565973;
+}
+
+@media (max-width: 768px) {
+  #contact-us .contact-us-container {
+    gap: 1.5 rem;
+    padding: 1.5rem;
+  }
+  #contact-us .breadcrumb {
+    padding: 0.75rem;
+    margin-top: 1.5rem;
+  }
+  #contact-us .contact-elements {
+    flex-direction: column;
+    gap: 2rem;
+    padding: 0 1 rem;
+    display: flex;
+  }
+  #contact-us .contact-elements.desktop-view {
+    display: none;
+  }
+  #contact-us .contact-elements.mobile-view {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+  #contact-us .contact-elements .contact-info {
+    width: 100%;
+    padding-bottom: 2rem;
+  }
+  #contact-us .contact-elements .contact-info h1 {
+    display: flex;
+    justify-content: center;
+    padding-left: 1.875rem;
+  }
+  #contact-us .contact-elements .contact-info .contact-element {
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    text-align: center;
+  }
+  #contact-us .contact-elements .contact-info .contact-element a {
+    width: 100%;
+    justify-content: center;
+    padding-left: 1.25rem;
+  }
+  #contact-us .contact-elements .contact-info .contact-element p {
+    display: flex;
+    justify-content: center;
+    padding-left: 0;
+  }
+  #contact-us .contact-elements .contact-info .contact-element .email-us-header,
+  #contact-us .contact-elements .contact-info .contact-element .careers-header {
+    align-items: center;
+    gap: 1.25rem;
+  }
+  #contact-us .contact-elements .consultation {
+    position: static;
+    width: 100%;
+    max-width: unset;
+  }
+  #contact-us .contact-elements .consultation .consultation-wrapper {
+    padding: 2rem;
+  }
+  #contact-us .contact-elements .consultation .consultation-wrapper h3 {
+    font-size: 1.5rem;
+  }
+  #contact-us .contact-elements .consultation .consultation-wrapper label {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 0.625rem;
+  }
+  #map-section .map-container {
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 6.25rem;
+  }
+  #map-section .map-container .leaflet-container,
+  #map-section .map-container .addresses {
+    width: 100%;
+  }
+  #map-section .map-container .leaflet-container {
+    max-width: unset;
+  }
+  #map-section .addresses {
+    margin-top: 5rem;
+    width: 100% !important;
+    max-width: unset !important;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center !important;
+  }
+  #map-section .addresses .socials-icons {
+    width: 100% !important;
+    max-width: unset !important;
+    justify-content: center !important;
+    display: flex;
+  }
+  #map-section .addresses .medical-center h4 {
+    width: 100%;
+    justify-content: center;
+    display: flex;
+  }
+  #map-section .addresses .medical-center p,
+  #map-section .addresses .medical-center .times-wrapper {
+    width: 100%;
+    justify-content: center !important;
+    align-items: center !important;
+    display: flex !important;
+  }
 }/*# sourceMappingURL=contact-styles.css.map */
