--- a/silicon-design/src/styles/contact-styles.scss
+++ b/silicon-design/src/styles/contact-styles.scss
@@ -71,21 +71,47 @@
     justify-content: space-between;
     align-items: flex-start;
     position: relative;
+    flex-direction: column;
+
+    &.desktop-view {
+      display: flex;
+    }
+
+    &.mobile-view {
+      display: none;
+    }
 
     .contact-element {
       display: flex;
-      gap: 1rem;
+      flex-direction: column;
+
+      .email-us-header,
+      .careers-header {
+        display: flex;
+        align-items: flex-start;
+        gap: 1.5rem;
+      }
+
+      p {
+        padding-left: 4.6875rem;
+      }
+
+      a {
+        padding-left: 4.6875rem;
+      }
     }
+
     a.leave-message,
     a.send-application {
       @each $property, $value in $navigation-hover {
         #{$property}: $value;
+
+        display: flex;
+        color: $primary;
+        align-items: center;
+        gap: 0.5rem;
+        text-decoration: none;
       }
-      display: flex;
-      color: $primary;
-      align-items: center;
-      gap: 0.5rem;
-      text-decoration: none;
 
       &:hover,
       &:focus {
@@ -112,7 +138,7 @@
       flex-direction: column;
       width: 24.375rem;
       padding-bottom: 127px;
-      gap: 2rem;
+      gap: 3rem;
 
       h1 {
         @each $property, $value in $heading-h1 {
@@ -123,12 +149,6 @@
       img {
         width: 55px;
         height: 55px;
-      }
-      .email-us {
-        display: flex;
-        gap: 1.5rem;
-        align-items: flex-start;
-        margin-top: 4.5rem;
       }
 
       .email-us-text {
@@ -147,13 +167,6 @@
             #{$property}: $value;
           }
         }
-      }
-
-      .careers {
-        display: flex;
-        gap: 1.5rem;
-        align-items: flex-start;
-        margin-top: 45px;
       }
 
       .careers-text {
@@ -178,10 +191,26 @@
       position: absolute;
       bottom: -6.875rem;
       right: 0;
+      margin-right: 1rem;
       background-color: white;
       z-index: 3;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+
+      @media (max-width: 947px) {
+        max-width: 25rem;
+
+        h3 {
+          padding-right: 0 !important;
+        }
+      }
+      @media (max-width: 818px) {
+        max-width: 21.875rem;
+
+        h3 {
+          padding-right: 0 !important;
+        }
+      }
 
       .consultation-wrapper {
         display: flex;
@@ -479,22 +508,22 @@ body.dark-theme #contact-us::after {
     padding-left: 1rem;
     padding-right: 1rem;
     align-items: stretch;
+    gap: 1rem;
 
     .leaflet-container {
       border-radius: 8px;
       flex: 1;
       max-width: 39.75rem;
       min-height: 30.125rem !important;
+      background: none;
     }
 
     .addresses {
       display: flex;
       flex-direction: column;
-      max-width: 39.75rem;
       align-items: flex-end;
       flex: 1;
       gap: 3.125rem;
-      min-height: 30.125rem !important;
 
       .medical-center {
         display: flex;
@@ -661,6 +690,143 @@ body.dark-theme #map-section {
               color: #565973;
             }
           }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  #contact-us {
+    .contact-us-container {
+      gap: 1.5 rem;
+      padding: 1.5rem;
+    }
+
+    .breadcrumb {
+      padding: 0.75rem;
+      margin-top: 1.5rem;
+    }
+
+    .contact-elements {
+      flex-direction: column;
+      gap: 2rem;
+      padding: 0 1 rem;
+      display: flex;
+
+      &.desktop-view {
+        display: none;
+      }
+
+      &.mobile-view {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 1rem;
+      }
+
+      .contact-info {
+        width: 100%;
+        padding-bottom: 2rem;
+
+        h1 {
+          display: flex;
+          justify-content: center;
+          padding-left: 1.875rem;
+        }
+
+        .contact-element {
+          flex-direction: column;
+          gap: 1rem;
+          align-items: center;
+          text-align: center;
+
+          a {
+            width: 100%;
+            justify-content: center;
+            padding-left: 1.25rem;
+          }
+
+          p {
+            display: flex;
+            justify-content: center;
+            padding-left: 0;
+          }
+
+          .email-us-header,
+          .careers-header {
+            align-items: center;
+            gap: 1.25rem;
+          }
+        }
+      }
+
+      .consultation {
+        position: static;
+        width: 100%;
+        max-width: unset;
+
+        .consultation-wrapper {
+          padding: 2rem;
+
+          h3 {
+            font-size: 1.5rem;
+          }
+
+          label {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 0.625rem;
+          }
+        }
+      }
+    }
+  }
+
+  #map-section {
+    .map-container {
+      flex-direction: column;
+      gap: 2rem;
+      margin-bottom: 6.25rem;
+
+      .leaflet-container,
+      .addresses {
+        width: 100%;
+      }
+
+      .leaflet-container {
+        max-width: unset;
+      }
+    }
+
+    .addresses {
+      margin-top: 5rem;
+      width: 100% !important;
+      max-width: unset !important;
+      display: flex !important;
+      justify-content: center !important;
+      align-items: center !important;
+
+      .socials-icons {
+        width: 100% !important;
+        max-width: unset !important;
+        justify-content: center !important;
+        display: flex;
+      }
+
+      .medical-center {
+        h4 {
+          width: 100%;
+          justify-content: center;
+          display: flex;
+        }
+
+        p,
+        .times-wrapper {
+          width: 100%;
+          justify-content: center !important;
+          align-items: center !important;
+          display: flex !important;
         }
       }
     }
