made the contact page responsive for mobile devices

--- a/silicon-design/src/styles/contact-styles.css
+++ b/silicon-design/src/styles/contact-styles.css
@@ -83,8 +83,7 @@
 #contact-us .contact-elements .contact-element a {
   padding-left: 4.6875rem;
 }
-#contact-us .contact-elements a.leave-message,
-#contact-us .contact-elements a.send-application {
+#contact-us .contact-elements a.leave-message {
   color: #6366f1;
   display: flex;
   color: #6366f1;
@@ -104,23 +103,17 @@
   gap: 0.5rem;
   text-decoration: none;
 }
-#contact-us .contact-elements a.leave-message:hover, #contact-us .contact-elements a.leave-message:focus,
-#contact-us .contact-elements a.send-application:hover,
-#contact-us .contact-elements a.send-application:focus {
+#contact-us .contact-elements a.leave-message:hover, #contact-us .contact-elements a.leave-message:focus {
   color: #1215c3;
 }
-#contact-us .contact-elements a.leave-message:active,
-#contact-us .contact-elements a.send-application:active {
+#contact-us .contact-elements a.leave-message:active {
   color: #9294f5;
 }
-#contact-us .contact-elements a.leave-message .material-icons,
-#contact-us .contact-elements a.send-application .material-icons {
+#contact-us .contact-elements a.leave-message .material-icons {
   margin-left: 0.5rem;
   transition: transform 0.3s ease;
 }
-#contact-us .contact-elements a.leave-message:hover .material-icons, #contact-us .contact-elements a.leave-message:focus .material-icons,
-#contact-us .contact-elements a.send-application:hover .material-icons,
-#contact-us .contact-elements a.send-application:focus .material-icons {
+#contact-us .contact-elements a.leave-message:hover .material-icons, #contact-us .contact-elements a.leave-message:focus .material-icons {
   transform: translateX(3px);
 }
 #contact-us .contact-elements .contact-info {
@@ -441,13 +434,14 @@ body.dark-theme #contact-us::after {
   width: 100%;
   max-width: 81rem;
   margin: 0 auto;
-  justify-content: space-between;
   margin-top: 6rem;
   margin-bottom: 33.875rem;
   padding-left: 1rem;
   padding-right: 1rem;
   align-items: stretch;
   gap: 1rem;
+  justify-content: center;
+  align-items: center;
 }
 #map-section .map-container .leaflet-container {
   border-radius: 8px;
@@ -731,7 +725,7 @@ body.dark-theme #map-section .addresses .medical-center .times-wrapper .time-ent
 
 @media (max-width: 768px) {
   #contact-us .contact-us-container {
-    gap: 1.5 rem;
+    gap: 1.5rem;
     padding: 1.5rem;
   }
   #contact-us .breadcrumb {
@@ -741,7 +735,7 @@ body.dark-theme #map-section .addresses .medical-center .times-wrapper .time-ent
   #contact-us .contact-elements {
     flex-direction: column;
     gap: 2rem;
-    padding: 0 1 rem;
+    padding: 0 1rem;
     display: flex;
   }
   #contact-us .contact-elements.desktop-view {
@@ -806,35 +800,135 @@ body.dark-theme #map-section .addresses .medical-center .times-wrapper .time-ent
   }
   #map-section .map-container .leaflet-container,
   #map-section .map-container .addresses {
-    width: 100%;
+    width: 93% !important;
   }
-  #map-section .map-container .leaflet-container {
-    max-width: unset;
-  }
-  #map-section .addresses {
+  #map-section .map-container .addresses {
     margin-top: 5rem;
-    width: 100% !important;
-    max-width: unset !important;
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center !important;
-  }
-  #map-section .addresses .socials-icons {
-    width: 100% !important;
-    max-width: unset !important;
-    justify-content: center !important;
+    width: 100%;
+    max-width: unset;
     display: flex;
+    justify-content: center;
+    align-items: center;
   }
-  #map-section .addresses .medical-center h4 {
+  #map-section .map-container .addresses .socials-icons {
+    justify-content: center;
+  }
+  #map-section .map-container .addresses .medical-center h4 {
     width: 100%;
     justify-content: center;
     display: flex;
   }
-  #map-section .addresses .medical-center p,
-  #map-section .addresses .medical-center .times-wrapper {
+  #map-section .map-container .addresses .medical-center p,
+  #map-section .map-container .addresses .medical-center .times-wrapper {
     width: 100%;
-    justify-content: center !important;
-    align-items: center !important;
-    display: flex !important;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+}
+@media (max-width: 480px) {
+  #contact-us .breadcrumb {
+    display: none;
+  }
+  #contact-us h1 {
+    margin-top: 3.125rem;
+  }
+  #contact-us .contact-elements {
+    gap: 1rem;
+  }
+  #contact-us .contact-elements .consultation {
+    padding: 1rem;
+    box-shadow: none;
+  }
+  #contact-us .contact-elements .consultation .consultation-wrapper {
+    padding: 1rem;
+  }
+  #contact-us .contact-elements .consultation .consultation-wrapper h3 {
+    font-size: 1.5rem;
+    margin-bottom: 1rem;
+    padding-top: 2rem;
+    text-wrap: wrap;
+  }
+  #contact-us .contact-elements .consultation .consultation-wrapper form {
+    gap: 0.75rem;
+  }
+  #contact-us .contact-elements .consultation .consultation-wrapper form .form-group label {
+    font-size: 0.875rem;
+    margin-bottom: 0.25rem;
+  }
+  #contact-us .contact-elements .consultation .consultation-wrapper form .form-group input,
+  #contact-us .contact-elements .consultation .consultation-wrapper form .form-group select {
+    font-size: 0.875rem;
+    padding: 0.5rem;
+  }
+  #contact-us .contact-elements .consultation .consultation-wrapper form button[type=submit] {
+    margin-top: 2rem;
+    padding: 0.75rem;
+    font-size: 1rem;
+    margin-bottom: 3rem;
+  }
+  #contact-us .contact-elements .contact-info {
+    gap: 1.5rem;
+  }
+  #contact-us .contact-elements .contact-info h1 {
+    font-size: 2rem;
+    margin-bottom: 1rem;
+    padding-left: 0.5rem;
+  }
+  #contact-us .contact-elements .contact-info .contact-element {
+    padding: 1rem 0;
+  }
+  #contact-us .contact-elements .contact-info .contact-element > .email-us-header, #contact-us .contact-elements .contact-info .contact-element > .careers-header {
+    gap: 0.8rem;
+  }
+  #contact-us .contact-elements .contact-info .contact-element img {
+    width: 45px;
+    height: 45px;
+  }
+  #contact-us .contact-elements .contact-info .contact-element h4 {
+    font-size: 1.6rem;
+    margin: 0.5rem 0 0;
+  }
+  #contact-us .contact-elements .contact-info .contact-element p {
+    display: none;
+  }
+  #contact-us .contact-elements .contact-info .contact-element a.leave-message {
+    font-size: 1rem;
+    margin-top: 0.5rem;
+    justify-content: center;
+    padding-left: 1.875rem;
+  }
+  #contact-us .contact-elements .contact-info .contact-element a.leave-message .material-icons {
+    font-size: 1.1rem;
+  }
+  #map-section {
+    flex-direction: column;
+    padding: 0.5rem;
+  }
+  #map-section .map-container {
+    margin-top: 0;
+    align-items: center;
+  }
+  #map-section .map-container .leaflet-container {
+    min-height: 23.75rem !important;
+    max-width: 22.5rem;
+  }
+  #map-section .map-container .addresses {
+    margin-bottom: -6.25rem;
+    margin-top: -3.125rem;
+  }
+  #map-section .map-container .addresses .medical-center,
+  #map-section .map-container .addresses .socials-icons {
+    width: 100%;
+    max-width: none;
+    text-align: left;
+  }
+  #map-section .map-container .addresses .medical-center .times-wrapper,
+  #map-section .map-container .addresses .medical-center p,
+  #map-section .map-container .addresses .medical-center h4,
+  #map-section .map-container .addresses .socials-icons .times-wrapper,
+  #map-section .map-container .addresses .socials-icons p,
+  #map-section .map-container .addresses .socials-icons h4 {
+    display: none;
   }
 }/*# sourceMappingURL=contact-styles.css.map */
