--- a/silicon-design/src/styles/contact-styles.scss
+++ b/silicon-design/src/styles/contact-styles.scss
@@ -101,8 +101,7 @@
       }
     }
 
-    a.leave-message,
-    a.send-application {
+    a.leave-message {
       @each $property, $value in $navigation-hover {
         #{$property}: $value;
 
@@ -502,13 +501,14 @@ body.dark-theme #contact-us::after {
     width: 100%;
     max-width: 81rem;
     margin: 0 auto;
-    justify-content: space-between;
     margin-top: 6rem;
     margin-bottom: 33.875rem;
     padding-left: 1rem;
     padding-right: 1rem;
     align-items: stretch;
     gap: 1rem;
+    justify-content: center;
+    align-items: center;
 
     .leaflet-container {
       border-radius: 8px;
@@ -699,7 +699,7 @@ body.dark-theme #map-section {
 @media (max-width: 768px) {
   #contact-us {
     .contact-us-container {
-      gap: 1.5 rem;
+      gap: 1.5rem;
       padding: 1.5rem;
     }
 
@@ -711,7 +711,7 @@ body.dark-theme #map-section {
     .contact-elements {
       flex-direction: column;
       gap: 2rem;
-      padding: 0 1 rem;
+      padding: 0 1rem;
       display: flex;
 
       &.desktop-view {
@@ -791,42 +791,165 @@ body.dark-theme #map-section {
 
       .leaflet-container,
       .addresses {
+        width: 93% !important;
+      }
+
+      .addresses {
+        margin-top: 5rem;
         width: 100%;
-      }
-
-      .leaflet-container {
         max-width: unset;
-      }
-    }
-
-    .addresses {
-      margin-top: 5rem;
-      width: 100% !important;
-      max-width: unset !important;
-      display: flex !important;
-      justify-content: center !important;
-      align-items: center !important;
-
-      .socials-icons {
-        width: 100% !important;
-        max-width: unset !important;
-        justify-content: center !important;
         display: flex;
-      }
+        justify-content: center;
+        align-items: center;
 
-      .medical-center {
-        h4 {
-          width: 100%;
+        .socials-icons {
           justify-content: center;
-          display: flex;
         }
 
-        p,
-        .times-wrapper {
+        .medical-center {
+          h4 {
+            width: 100%;
+            justify-content: center;
+            display: flex;
+          }
+
+          p,
+          .times-wrapper {
+            width: 100%;
+            justify-content: center;
+            align-items: center;
+            display: flex;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  #contact-us {
+    .breadcrumb {
+      display: none;
+    }
+
+    h1 {
+      margin-top: 3.125rem;
+    }
+
+    .contact-elements {
+      gap: 1rem;
+
+      .consultation {
+        padding: 1rem;
+        box-shadow: none;
+
+        .consultation-wrapper {
+          padding: 1rem;
+
+          h3 {
+            font-size: 1.5rem;
+            margin-bottom: 1rem;
+            padding-top: 2rem;
+            text-wrap: wrap;
+          }
+
+          form {
+            gap: 0.75rem;
+
+            .form-group {
+              label {
+                font-size: 0.875rem;
+                margin-bottom: 0.25rem;
+              }
+
+              input,
+              select {
+                font-size: 0.875rem;
+                padding: 0.5rem;
+              }
+            }
+
+            button[type="submit"] {
+              margin-top: 2rem;
+              padding: 0.75rem;
+              font-size: 1rem;
+              margin-bottom: 3rem;
+            }
+          }
+        }
+      }
+      .contact-info {
+        gap: 1.5rem;
+
+        h1 {
+          font-size: 2rem;
+          margin-bottom: 1rem;
+          padding-left: 0.5rem;
+        }
+        .contact-element {
+          padding: 1rem 0;
+
+          & > .email-us-header,
+          & > .careers-header {
+            gap: 0.8rem;
+          }
+
+          img {
+            width: 45px;
+            height: 45px;
+          }
+
+          h4 {
+            font-size: 1.6rem;
+            margin: 0.5rem 0 0;
+          }
+
+          p {
+            display: none;
+          }
+
+          a.leave-message {
+            font-size: 1rem;
+            margin-top: 0.5rem;
+            justify-content: center;
+            padding-left: 1.875rem;
+
+            .material-icons {
+              font-size: 1.1rem;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  #map-section {
+    flex-direction: column;
+    padding: 0.5rem;
+    .map-container {
+      margin-top: 0;
+      align-items: center;
+
+      .leaflet-container {
+        min-height: 23.75rem !important;
+        max-width: 22.5rem;
+      }
+
+      .addresses {
+        margin-bottom: -6.25rem;
+        margin-top: -3.125rem;
+
+        .medical-center,
+        .socials-icons {
           width: 100%;
-          justify-content: center !important;
-          align-items: center !important;
-          display: flex !important;
+          max-width: none;
+          text-align: left;
+
+          .times-wrapper,
+          p,
+          h4 {
+            display: none;
+          }
         }
       }
     }
