--- a/silicon-design/src/styles/contact-styles.css
+++ b/silicon-design/src/styles/contact-styles.css
@@ -90,18 +90,21 @@
   align-items: center;
   gap: 0.5rem;
   text-decoration: none;
+  margin-top: 0.9375rem;
   font-size: 16px;
   display: flex;
   color: #6366f1;
   align-items: center;
   gap: 0.5rem;
   text-decoration: none;
+  margin-top: 0.9375rem;
   font-weight: 600;
   display: flex;
   color: #6366f1;
   align-items: center;
   gap: 0.5rem;
   text-decoration: none;
+  margin-top: 0.9375rem;
 }
 #contact-us .contact-elements a.leave-message:hover, #contact-us .contact-elements a.leave-message:focus {
   color: #1215c3;
