--- a/silicon-design/src/styles/contact-styles.scss
+++ b/silicon-design/src/styles/contact-styles.scss
@@ -110,6 +110,7 @@
         align-items: center;
         gap: 0.5rem;
         text-decoration: none;
+        margin-top: 0.9375rem;
       }
 
       &:hover,
